--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "dependencies": {
     "bootstrap-icons": "^1.10.3",
     "inquirer": "^9.1.5"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
